Bug 1463378: Guard against sentinel values when creating AstRef; r=luke

--HG--
extra : rebase_source : 0320838569a167f56d914b830c66d2c1ee8e33d0
extra : histedit_source : ae4bb293d83b2e2e69889a02d23160fec3352f4f